fix(mobile): referrals, header, and social content on mobile

--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -378,14 +378,15 @@ p.unsubscribe-link-alt {
 .referral-balances {
   display: grid;
   margin-bottom: 20px;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
 }
 
 .referral-box {
   border: 1px solid #fddbd7;
   border-radius: 10px;
   padding: 20px 20px 10px 20px;
-  margin: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
